# PdfCut

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
assets/: images.qrc
src/: draggablepagelist.cpp  draggablepagelist.h  listwidgethelper.cpp  listwidgethelper.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pdfrenderer.cpp  pdfrenderer.h
